--- a/imports/components/todosList/todosList.html
+++ b/imports/components/todosList/todosList.html
@@ -8,7 +8,7 @@
 
   <login-buttons></login-buttons>
 
-  <form class="new-task" ng-submit="$ctrl.addTask($ctrl.newTask)">
+  <form class="new-task" ng-submit="$ctrl.addTask($ctrl.newTask)" ng-show="$ctrl.currentUser">
     <input ng-model="$ctrl.newTask" type="text" name="text" placeholder="Type to add new tasks" />
   </form>
 </header>
@@ -20,7 +20,7 @@
     <input type="checkbox" ng-checked="task.checked" ng-click="$ctrl.setChecked(task)" class="toggle-checked" />
 
     <span class="text">
-      {{task.text}}
+      <strong>{{task.username}}</strong> - {{task.text}}
     </span>
   </li>
 </ul>
