Secure the app to require login to edit DB and pull information from FB

--- a/imports/components/todosList/todosList.html
+++ b/imports/components/todosList/todosList.html
@@ -20,7 +20,7 @@
     <input type="checkbox" ng-checked="task.checked" ng-click="$ctrl.setChecked(task)" class="toggle-checked" />
 
     <span class="text">
-      <strong>{{task.username}}</strong> - {{task.text}}
+      <strong>{{task.name}}</strong> - {{task.text}}
     </span>
   </li>
 </ul>
